# Kerveros

./: CMakeLists.txt  CREDITS.txt  Kerveros.desktop  README.md  cut-from-cmake  helpmenudialog.cpp  helpmenudialog.h  io.github.alamahant.Kerveros-local.yml  io.github.alamahant.Kerveros.desktop  io.github.alamahant.Kerveros.metainfo.xml  io.github.alamahant.Kerveros.yml  main.cpp  resources.qrc  securitymanager.cpp  securitymanager.h  simple2fa.cpp  simple2fa.h  twofamanager.cpp  twofamanager.h
